# himotoki

./: .chunkhound.json  .gitignore  AGENTS.md  ANALYSIS_REPORT.md  ARCHITECTURE.md  CHANGELOG.md  MISMATCH_PLAN.md  OPTIMIZATION_REPORT.md  README.md  RELEASE_v0.1.1.md  check_failures.py  check_kotonishimashita.py  compare_ichiran.py  comparison_results.json  fork_project.sh  gen_conj.py  generate_report.py  init_db.py  migrate_conjugations.py  mismatch.json  opencode.json  partial.json  pyproject.toml  quick_test.py  results.json  test_conj.py  test_dict_load_fix.py  test_extended.py  test_synergy.py
.beads/: issues.jsonl
.chunkhound/: db.wal
.cursor/docs/: SYSTEM_WALKTHROUGH.md
.cursor/rules/: himotoki-system.mdc
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  tests.yml
data/: llm_skip.json  llm_triage_lock.json
docs/: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  PHASE2_TRIE_PLAN.md  mismatch_report.md
docs/plans/: himotoki-architecture.md
himotoki/: __init__.py  __main__.py  characters.py  cli.py  conjugations.py  conn.py  constants.py  counters.py  deromanize.py  dict.py  dict_counters.py  dict_grammar.py  dict_load.py  dict_split.py  dict_suffixes.py  kanji.py  lookup.py  models.py  numbers.py  output.py  romanize.py  segment.py  settings.py  splits.py  suffixes.py  synergies.py  trie.py  types.py
himotoki.egg-info/: PKG-INFO  SOURCES.txt
himotoki/data/: kanjidic2.xml
himotoki/db/: connection.py  models.py
himotoki/grammar/: __init__.py  counters.py  splits.py  suffix_handlers.py  suffixes.py  synergies.py  synergy_filters.py  synergy_rules.py
himotoki/loading/: conjugations.py  errata.py  jmdict.py
himotoki/lookup/: __init__.py  conj_data.py  constants.py  find_word.py
himotoki/output/: __init__.py  conjugation_display.py  format.py  meanings.py  types.py  word_info.py
himotoki/scoring/: __init__.py  caches.py  calc_score.py
output/: cache.json  llm_history.jsonl  llm_report.html  mismatch.json  partial.json  results.json
releases/: RELEASE_v0.1.0.md  RELEASE_v0.2.0.md  RELEASE_v0.2.1.md  RELEASE_v0.2.2.md  RELEASE_v0.2.3.md  RELEASE_v0.3.0.md  RELEASE_v0.3.1.md
scripts/: __init__.py  _debug_dp.py  _debug_lookup.py  analyze_expressions.py  analyze_fails.py  analyze_splittable_expressions.py  benchmark.py  compare.py  create_issues.py  create_pattern_issues.py  create_triage_issues.py  grammar_audit.py  init_db.py  llm_eval.py  llm_labeler.py  llm_report.py  optimize_db.py  report.py  test_expression_split.py  test_sentences.py
test/: README.md  evaluator.py  report.md  sentences.json
tests/: test_cli.py  test_conjugation_tree.py  test_ichiran_comparison.py  test_lookup.py  test_score_equivalence.py
tests/data/: conj.csv  conjo.csv  kwpos.csv  sample_jmdict.xml  score_equivalence_snapshot.json
